Greta v1.1.0
------------

+ added state space generation method, the generated state-space is written 
  as dot graph to a file in the workspace
+ added some methods to check structural properties of a system specification,
  the analysis results are currently printed to a message window 


Greta v1.0.0
------------

+ initial release